style: Various IDE-supported code style changes